cmake_minimum_required(VERSION 2.8)
project(unbound)

SET(VERSION "1.6.1")

INCLUDE (FindOpenSSL)

INCLUDE (CheckIncludeFiles)
INCLUDE (CheckSymbolExists)
INCLUDE (CheckTypeSize)
INCLUDE (CheckFunctionExists)
# usage: CHECK_INCLUDE_FILES (<header> <RESULT_VARIABLE> )

SET (HAVE_SSL 1)

CHECK_INCLUDE_FILES (arpa/inet.h HAVE_ARPA_INET_H)
CHECK_INCLUDE_FILES (dlfcn.h HAVE_DLFCN_H)
CHECK_INCLUDE_FILES (event.h HAVE_EVENT_H)
CHECK_INCLUDE_FILES (expat.h HAVE_EXPAT_H)
CHECK_INCLUDE_FILES (glob.h HAVE_GLOB_H)
CHECK_INCLUDE_FILES (grp.h HAVE_GRP_H)
CHECK_INCLUDE_FILES (memory.h HAVE_MEMORY_H)
CHECK_INCLUDE_FILES (netinet/in.h HAVE_NETINET_IN_H)
CHECK_INCLUDE_FILES (netinet/tcp.h HAVE_NETINET_TCP_H)
CHECK_INCLUDE_FILES (inttypes.h HAVE_INTTYPES_H)
CHECK_INCLUDE_FILES (stdlib.h HAVE_STDLIB_H)
CHECK_INCLUDE_FILES (malloc.h HAVE_MALLOC_H)
CHECK_INCLUDE_FILES (netdb.h HAVE_NETDB_H)
CHECK_INCLUDE_FILES (time.h HAVE_TIME_H)
CHECK_INCLUDE_FILES (ctype.h HAVE_CTYPE_H)
CHECK_INCLUDE_FILES (unistd.h HAVE_UNISTD_H)
CHECK_INCLUDE_FILES (sys/types.h HAVE_SYS_TYPES_H)
CHECK_INCLUDE_FILES (sys/wait.h HAVE_SYS_WAIT_H)
CHECK_INCLUDE_FILES (sys/param.h HAVE_SYS_PARAM_H)
CHECK_INCLUDE_FILES (sys/socket.h HAVE_SYS_SOCKET_H)
CHECK_INCLUDE_FILES (endian.h HAVE_ENDIAN_H)
CHECK_INCLUDE_FILES (syslog.h HAVE_SYSLOG_H)
CHECK_INCLUDE_FILES (openssl/err.h HAVE_OPENSSL_ERR_H)
CHECK_INCLUDE_FILES (openssl/rand.h HAVE_OPENSSL_RAND_H)
CHECK_INCLUDE_FILES (openssl/conf.h HAVE_OPENSSL_CONF_H)
CHECK_INCLUDE_FILES (openssl/engine.h HAVE_OPENSSL_ENGINE_H)
CHECK_INCLUDE_FILES (openssl/ssl.h HAVE_OPENSSL_SSL_H)
CHECK_INCLUDE_FILES (pthread.h HAVE_PTHREAD)

CHECK_FUNCTION_EXISTS(CRYPTO_cleanup_all_ex_data HAVE_CRYPTO_CLEANUP_ALL_EX_DATA)
CHECK_FUNCTION_EXISTS(ctime_r HAVE_CTIME_R)
CHECK_FUNCTION_EXISTS(daemon HAVE_DAEMON)

CHECK_SYMBOL_EXISTS(inet_ntop arpa/inet.h HAVE_INET_NTOP)
CHECK_SYMBOL_EXISTS(inet_pton arpa/inet.h HAVE_INET_PTON)
CHECK_SYMBOL_EXISTS(inet_aton arpa/inet.h HAVE_INET_ATON)
CHECK_SYMBOL_EXISTS(inet_ntop arpa/inet.h HAVE_DECL_INET_NTOP)
CHECK_SYMBOL_EXISTS(inet_pton arpa/inet.h HAVE_DECL_INET_PTON)
CHECK_SYMBOL_EXISTS(inet_aton arpa/inet.h HAVE_DECL_INET_ATON)
CHECK_SYMBOL_EXISTS(fsync unistd.h HAVE_FSYNC)
CHECK_SYMBOL_EXISTS(getaddrinfo netdb.h HAVE_GETADDRINFO)
CHECK_SYMBOL_EXISTS(isblank ctype.h HAVE_ISBLANK)
CHECK_SYMBOL_EXISTS(strftime time.h HAVE_STRFTIME)
CHECK_SYMBOL_EXISTS(localtime_r time.h HAVE_LOCALTIME_R)

CHECK_TYPE_SIZE(time_t SIZEOF_TIME_T)
SET (CMAKE_EXTRA_INCLUDE_FILES sys/socket.h netinet/in.h)
CHECK_TYPE_SIZE("struct in_pktinfo" HAVE_IN_PKTINFO)
SET (CMAKE_EXTRA_INCLUDE_FILES)
SET (MAXSYSLOGMSGLEN 256)
SET (UB_USERNAME \"nobody\")
SET (RUN_DIR \"/var/run/\")
SET (PIDFILE \"unbound.pid\")

IF (${HAVE_STDLIB_H})
SET(STDC_HEADERS 1)
ENDIF()

SET (ENABLE_DNSCRYPT 1)
SET (ENABLE_DNSTAP 0)

file (MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/dnscrypt)
file (MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/dnstap)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/dnscrypt/dnscrypt_config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/dnscrypt/dnscrypt_config.h)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/dnstap/dnstap_config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/dnstap/dnstap_config.h)
ADD_DEFINITIONS(-DHAVE_CONFIG_H=1)
ADD_DEFINITIONS(-DSTDC_HEADERS=${STDC_HEADERS})
ADD_DEFINITIONS(-DPACKAGE_VERSION="${VERSION}")
ADD_DEFINITIONS(-D_GNU_SOURCE)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR})



add_subdirectory(sldns)
add_subdirectory(libunbound)
add_subdirectory(validator)
add_subdirectory(dnscrypt)
add_subdirectory(util)
add_subdirectory(iterator)
add_subdirectory(services)
